trying to fix draft bans on mobile

--- a/frontend/src/components/mainComponents/css/draft.css
+++ b/frontend/src/components/mainComponents/css/draft.css
@@ -57,18 +57,26 @@ html::-webkit-scrollbar {
 }
 
 .teamBans { 
-    width: 50%;
+    width: 100%;
     height: 4%;
     display: flex;
     justify-content: space-around;
 }
 
-#purpleBans {
-    margin-right: 45%;
+.teamBans#purpleBans { 
+    justify-content: flex-start;
 }
 
-#orangeBans {
-    margin-left: 45%;
+.teamBans#purpleBans div { 
+    margin-left: 10px;
+}
+
+.teamBans#orangeBans { 
+    justify-content: flex-end;
+}
+
+.teamBans#orangeBans div { 
+    margin-right: 10px;
 }
 
 .banDisplay {
